--- a/Cindy/index.html
+++ b/Cindy/index.html
@@ -28,7 +28,7 @@
     <header>
         <div class="container d-flex align-items-center justify-content-between mt-3">
             <i class="cur d-md-block d-none fa-solid fa-magnifying-glass"></i>
-            <img class="cur ms-md-5" src="images/2_81c0aa03-67d2-4ced-98c2-3e5613f1e747.webp" alt="logo">
+            <img class="cur ms-md-4" src="images/2_81c0aa03-67d2-4ced-98c2-3e5613f1e747.webp" alt="logo">
             <div class="social">
                 <i class="fa-brands fa-facebook"></i>
                 <i class="fa-brands fa-pinterest"></i>
@@ -39,7 +39,7 @@
     </header>
 
     <nav class="text-center mt-4">
-        <ul class="d-flex justify-content-center align-items-center">
+        <ul class="d-flex justify-content-center align-items-center p-0">
             <li><a class="active" href="#">Home</a></li>
             <li class="shop cur">
                 Shop <i class="fa-solid fa-angle-down ms-2"></i>
@@ -83,47 +83,47 @@
             <div class="row text-center">
                 <div class="box col-lg-3 col-md-6 col-sm-12">
                     <div class="image">
-                        <img class="img-fluid" src="images/product1.png" alt="">
+                        <img class="img-fluid img" src="images/product1.png" alt="">
                         <img class="img-fluid hide" src="images/product3.png" alt="">
                     </div>
                     <div class="text">
                         <p>You're So Amazing</p>
-                        <p class="mt-1">&euro; 120.00 ERU </p>
+                        <p class="mt-1 priceP">&euro; 120.00 ERU </p>
                     </div>
-                    <a href="#">Choose Option</a>
+                    <a class="btn" href="product.html">Choose Option</a>
                 </div>
                 <div class="box col-lg-3 col-md-6 col-sm-12">
                     <div class="image">
-                        <img class="img-fluid" src="images/product2.png" alt="">
+                        <img class="img-fluid img" src="images/product2.png" alt="">
                         <img class="img-fluid hide" src="images/product4.png" alt="">
                     </div>
                     <div class="text">
                         <p>You're So Amazing</p>
-                        <p class="mt-1">&euro; 120.00 ERU </p>
+                        <p class="mt-1 priceP">&euro; 100.00 ERU </p>
                     </div>
-                    <a href="#">Choose Option</a>
+                    <a class="btn" href="product.html">Choose Option</a>
                 </div>
                 <div class="box col-lg-3 col-md-6 col-sm-12">
                     <div class="image">
-                        <img class="img-fluid" src="images/product3.png" alt="">
+                        <img class="img-fluid img" src="images/product3.png" alt="">
                         <img class="img-fluid hide" src="images/product1.png" alt="">
                     </div>
                     <div class="text">
                         <p>You're So Amazing</p>
-                        <p class="mt-1">&euro; 120.00 ERU </p>
+                        <p class="mt-1 priceP">&euro; 160.00 ERU </p>
                     </div>
-                    <a href="#">Choose Option</a>
+                    <a class="btn" href="product.html">Choose Option</a>
                 </div>
                 <div class="box col-lg-3 col-md-6 col-sm-12">
                     <div class="image">
-                        <img class="img-fluid" src="images/product4.png" alt="">
+                        <img class="img-fluid img" src="images/product4.png" alt="">
                         <img class="img-fluid hide" src="images/product2.png" alt="">
                     </div>
                     <div class="text">
                         <p>You're So Amazing</p>
-                        <p class="mt-1">&euro; 120.00 ERU </p>
+                        <p class="mt-1 priceP">&euro; 120.00 ERU </p>
                     </div>
-                    <a href="#">Choose Option</a>
+                    <a class="btn" href="product.html">Choose Option</a>
                 </div>
             </div>
         </div>
@@ -156,7 +156,7 @@
                         <p>Pair text with an image to focus on your chosen product, collection, or blog post. Add
                             details on
                             availability, style, or even provide a review.</p>
-                        <a href="#">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
+                        <a href="product.html">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
                     </div>
                 </div>
                 <div class="box col-lg-4 col-md-6 col-sm-12">
@@ -166,7 +166,7 @@
                         <p>Pair text with an image to focus on your chosen product, collection, or blog post. Add
                             details on
                             availability, style, or even provide a review.</p>
-                        <a href="#">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
+                        <a href="product.html">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
                     </div>
                 </div>
                 <div class="box col-lg-4 col-md-6 col-sm-12">
@@ -176,7 +176,7 @@
                         <p>Pair text with an image to focus on your chosen product, collection, or blog post. Add
                             details on
                             availability, style, or even provide a review.</p>
-                        <a href="#">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
+                        <a href="product.html">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
                     </div>
                 </div>
             </div>
