--- a/Cindy/cart.html
+++ b/Cindy/cart.html
@@ -55,40 +55,7 @@
         </ul>
     </nav>
 
-    <div class="product-card container mt-4">
-        <div class="row">
-            <div class="image col-sm-12 col-md-7"><img src="" alt=""></div>
-            <div class="ImgForm col-sm-12 col-md-5 ps-md-5">
-                <h2 class="mb-4 mt-4 mt-md-0">You're Amazing</h2>
-                <p class="price">&euro; <span class="pr"></span> ERU</p>
-                <div class="size-box">
-                    <p class="label">Size</p>
-                    <div class="size">
-                        <span class="sm cur">S</span>
-                        <span class="md cur">M</span>
-                        <span class="lg cur">L</span>
-                    </div>
-                </div>
-                <div class="quantity-box mt-4">
-                    <p class="label">Quantity</p>
-                    <div class="quantity d-flex align-items-center justify-content-between p-2">
-                        <i class="fa-solid fa-minus"></i>
-                        <span class="quantity-counter">1</span>
-                        <i class="fa-solid fa-plus"></i>
-                    </div>
-                </div>
-                <a class="btn one mt-3" href="cart.html">Add to cart</a>
-                <a class="btn two" href="buy_product.html">Buy it now</a>
-                <p class="para mt-3">Candy macaroon chocolate cake powder donut. Powder ice cream pudding pie chocolate
-                    bar
-                    muffin sugar
-                    plum
-                    sweet. Gingerbread brownie donut croissant jelly-o marshmallow chocolate cake pudding sugar plum.
-                    Pastry
-                    marzipan topping wafer dessert chupa chups bonbon croissant.</p>
-            </div>
-        </div>
-    </div>
+
 
     <footer class="ani mt-1 text-md-start text-center pt-md-0 pt-3">
         <div class="container">
@@ -108,7 +75,7 @@
         </div>
     </footer>
 
-    <script src="JS/main.js"></script>
+    <!-- <script src="JS/main.js"></script>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const priceVal = urlParams.get('price');
@@ -118,7 +85,7 @@
         priceSpan.innerHTML = priceVal;
         cardImage.src = src;
     </script>
-    <script src="JS/product.js"></script>
+    <script src="JS/product.js"></script> -->
 </body>
 
 </html>
