--- a/Cindy/index.html
+++ b/Cindy/index.html
@@ -28,7 +28,7 @@
     <header>
         <div class="container d-flex align-items-center justify-content-between mt-3">
             <i class="cur d-md-block d-none fa-solid fa-magnifying-glass"></i>
-            <img class="cur ms-md-4" src="images/2_81c0aa03-67d2-4ced-98c2-3e5613f1e747.webp" alt="logo">
+            <img class="cur ms-md-5" src="images/2_81c0aa03-67d2-4ced-98c2-3e5613f1e747.webp" alt="logo">
             <div class="social">
                 <i class="fa-brands fa-facebook"></i>
                 <i class="fa-brands fa-pinterest"></i>
@@ -42,12 +42,12 @@
         <ul class="d-flex justify-content-center align-items-center p-0">
             <li><a class="active" href="#">Home</a></li>
             <li class="shop cur">
-                Shop <i class="fa-solid fa-angle-down ms-2"></i>
+                <a>Shop<i class="fa-solid fa-angle-down ms-2"></i></a>
                 <ul class="shop-menu">
-                    <li><a>Best Sellers</a></li>
-                    <li><a>New Arrivals</a></li>
-                    <li><a>On Sale</a></li>
-                    <li><a>All Collections</a></li>
+                    <li><a href="products.html">Best Sellers</a></li>
+                    <li><a href="products.html">New Arrivals</a></li>
+                    <li><a href="products.html">On Sale</a></li>
+                    <li><a href="products.html">All Collections</a></li>
                 </ul>
             </li>
             <li><a href="#">About Us</a></li>
@@ -88,7 +88,7 @@
                     </div>
                     <div class="text">
                         <p>You're So Amazing</p>
-                        <p class="mt-1 priceP">&euro; 120.00 ERU </p>
+                        <p class="mt-1">&euro; <span class="priceP">180.00</span> ERU </p>
                     </div>
                     <a class="btn" href="product.html">Choose Option</a>
                 </div>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="text">
                         <p>You're So Amazing</p>
-                        <p class="mt-1 priceP">&euro; 100.00 ERU </p>
+                        <p class="mt-1">&euro; <span class="priceP">100.00</span> ERU </p>
                     </div>
                     <a class="btn" href="product.html">Choose Option</a>
                 </div>
@@ -110,7 +110,7 @@
                     </div>
                     <div class="text">
                         <p>You're So Amazing</p>
-                        <p class="mt-1 priceP">&euro; 160.00 ERU </p>
+                        <p class="mt-1">&euro; <span class="priceP">160.00</span> ERU </p>
                     </div>
                     <a class="btn" href="product.html">Choose Option</a>
                 </div>
@@ -121,7 +121,7 @@
                     </div>
                     <div class="text">
                         <p>You're So Amazing</p>
-                        <p class="mt-1 priceP">&euro; 120.00 ERU </p>
+                        <p class="mt-1">&euro; <span class="priceP">120.00</span> ERU </p>
                     </div>
                     <a class="btn" href="product.html">Choose Option</a>
                 </div>
@@ -352,6 +352,7 @@
 
 
     <script src="JS/main.js"></script>
+    <script src="JS/buy.js"></script>
 </body>
 
 </html>
