--- a/Cindy/products.html
+++ b/Cindy/products.html
@@ -41,12 +41,12 @@
     <nav class="text-center mt-4">
         <ul class="d-flex justify-content-center align-items-center p-0">
             <li><a href="index.html">Home</a></li>
-            <li class="shop cur"><a>Shop<i class="fa-solid fa-angle-down ms-2"></i></a>
+            <li class="shop cur"><a class="active">Shop<i class="fa-solid fa-angle-down ms-2"></i></a>
                 <ul class="shop-menu">
-                    <li><a href="products.html">Best Sellers</a></li>
-                    <li><a href="products.html">New Arrivals</a></li>
-                    <li><a href="products.html">On Sale</a></li>
-                    <li><a href="products.html">All Collections</a></li>
+                    <li><a>Best Sellers</a></li>
+                    <li><a>New Arrivals</a></li>
+                    <li><a>On Sale</a></li>
+                    <li><a>All Collections</a></li>
                 </ul>
             </li>
             <li><a href="#">About Us</a></li>
@@ -55,37 +55,54 @@
         </ul>
     </nav>
 
-    <div class="product-card container mt-4">
-        <div class="row">
-            <div class="image col-sm-12 col-md-7"><img src="" alt=""></div>
-            <div class="ImgForm col-sm-12 col-md-5 ps-md-5">
-                <h2 class="mb-4 mt-4 mt-md-0">You're Amazing</h2>
-                <p class="price">&euro; <span class="pr"></span> ERU</p>
-                <div class="size-box">
-                    <p class="label">Size</p>
-                    <div class="size">
-                        <span class="sm cur">S</span>
-                        <span class="md cur">M</span>
-                        <span class="lg cur">L</span>
+    <div class="most-wanted ani mt-5 mb-4">
+        <div class="container">
+            <h2 class="main-title text-center mb-4">Products</h2>
+            <div class="row text-center">
+                <div class="box col-lg-3 col-md-6 col-sm-12">
+                    <div class="image">
+                        <img class="img-fluid img" src="images/product1.png" alt="">
+                        <img class="img-fluid hide" src="images/product3.png" alt="">
                     </div>
-                </div>
-                <div class="quantity-box mt-4">
-                    <p class="label">Quantity</p>
-                    <div class="quantity d-flex align-items-center justify-content-between p-2">
-                        <i class="fa-solid fa-minus"></i>
-                        <span class="quantity-counter">1</span>
-                        <i class="fa-solid fa-plus"></i>
+                    <div class="text">
+                        <p>You're So Amazing</p>
+                        <p class="mt-1">&euro; <span class="priceP">180.00</span> ERU </p>
                     </div>
+                    <a class="btn" href="product.html">Choose Option</a>
                 </div>
-                <a class="btn one mt-3" href="cart.html">Add to cart</a>
-                <a class="btn two" href="buy_product.html">Buy it now</a>
-                <p class="para mt-3">Candy macaroon chocolate cake powder donut. Powder ice cream pudding pie chocolate
-                    bar
-                    muffin sugar
-                    plum
-                    sweet. Gingerbread brownie donut croissant jelly-o marshmallow chocolate cake pudding sugar plum.
-                    Pastry
-                    marzipan topping wafer dessert chupa chups bonbon croissant.</p>
+                <div class="box col-lg-3 col-md-6 col-sm-12">
+                    <div class="image">
+                        <img class="img-fluid img" src="images/product2.png" alt="">
+                        <img class="img-fluid hide" src="images/product4.png" alt="">
+                    </div>
+                    <div class="text">
+                        <p>You're So Amazing</p>
+                        <p class="mt-1">&euro; <span class="priceP">100.00</span> ERU </p>
+                    </div>
+                    <a class="btn" href="product.html">Choose Option</a>
+                </div>
+                <div class="box col-lg-3 col-md-6 col-sm-12">
+                    <div class="image">
+                        <img class="img-fluid img" src="images/product3.png" alt="">
+                        <img class="img-fluid hide" src="images/product1.png" alt="">
+                    </div>
+                    <div class="text">
+                        <p>You're So Amazing</p>
+                        <p class="mt-1">&euro; <span class="priceP">160.00</span> ERU </p>
+                    </div>
+                    <a class="btn" href="product.html">Choose Option</a>
+                </div>
+                <div class="box col-lg-3 col-md-6 col-sm-12">
+                    <div class="image">
+                        <img class="img-fluid img" src="images/product4.png" alt="">
+                        <img class="img-fluid hide" src="images/product2.png" alt="">
+                    </div>
+                    <div class="text">
+                        <p>You're So Amazing</p>
+                        <p class="mt-1">&euro; <span class="priceP">120.00</span> ERU </p>
+                    </div>
+                    <a class="btn" href="product.html">Choose Option</a>
+                </div>
             </div>
         </div>
     </div>
@@ -108,17 +125,7 @@
         </div>
     </footer>
 
-    <script src="JS/main.js"></script>
-    <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const priceVal = urlParams.get('price');
-        const src = urlParams.get('src');
-        let priceSpan = document.querySelector(".pr")
-        let cardImage = document.querySelector('.image img');
-        priceSpan.innerHTML = priceVal;
-        cardImage.src = src;
-    </script>
-    <script src="JS/product.js"></script>
+    <script src="JS/buy.js"></script>
 </body>
 
 </html>
