--- a/Cindy/buy_product.html
+++ b/Cindy/buy_product.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="name mt-3">
                         <div class="row">
-                            <div class="col-sm-12 col-md-6 pe-1">
+                            <div class="col-sm-12 col-md-6 pe-1 pe-md-0">
                                 <div class="form-floating mb-3">
                                     <input type="text" class="form-control" id="floatingInput" placeholder="First name">
                                     <label for="floatingInput">
@@ -67,7 +67,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-6 ps-1">
+                            <div class="col-sm-12 col-md-6 ps-1 ps-md-0">
                                 <div class="form-floating mb-3">
                                     <input type="text" class="form-control" id="floatingInput" placeholder="Last name">
                                     <label for="floatingInput">
