--- a/Cindy/buy_product.html
+++ b/Cindy/buy_product.html
@@ -33,7 +33,7 @@
 
     <hr>
 
-    <div class="buy continer">
+    <div class="buy container">
         <div class="row">
             <div class="col-sm-12 col-md-6">
                 <div class="buy-form p-5">
