--- a/Cindy/products.html
+++ b/Cindy/products.html
@@ -33,7 +33,7 @@
                 <i class="fa-brands fa-facebook"></i>
                 <i class="fa-brands fa-pinterest"></i>
                 <i class="fa-brands fa-instagram"></i>
-                <i class="fa-solid fa-bag-shopping"></i>
+                <a href="cart.html" class="text-dark"><i class="fa-solid fa-bag-shopping"></i></a>
             </div>
         </div>
     </header>
@@ -124,7 +124,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="JS/main.js"></script>
     <script src="JS/buy.js"></script>
 </body>
 
