--- a/Cindy/buy_product.html
+++ b/Cindy/buy_product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CINDY</title>
-    <link rel="icon" href="images/about_section.png">
+    <link rel="icon" href="images/2_81c0aa03-67d2-4ced-98c2-3e5613f1e747.webp">
     <link rel="stylesheet" href="CSS/all.min.css">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/bootstrap.min.css.map">
@@ -27,7 +27,8 @@
 
     <header>
         <div class="container mt-3">
-            <img class="cur" src="images/2_81c0aa03-67d2-4ced-98c2-3e5613f1e747.webp" alt="logo">
+            <a href="index.html"><img class="cur" src="images/2_81c0aa03-67d2-4ced-98c2-3e5613f1e747.webp"
+                    alt="logo"></a>
         </div>
     </header>
 
