--- a/Cindy/index.html
+++ b/Cindy/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CINDY</title>
-    <link rel="icon" href="images/about_section.png">
+    <link rel="icon" href="images/2_81c0aa03-67d2-4ced-98c2-3e5613f1e747.webp">
     <link rel="stylesheet" href="CSS/all.min.css">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/bootstrap.min.css.map">
@@ -33,7 +33,7 @@
                 <i class="fa-brands fa-facebook"></i>
                 <i class="fa-brands fa-pinterest"></i>
                 <i class="fa-brands fa-instagram"></i>
-                <a href="cart.html" class="text-dark"><i class="fa-solid fa-bag-shopping"></i></a>
+                <a href="cart.html" class="text-black"><i class="fa-solid fa-bag-shopping"></i></a>
             </div>
         </div>
     </header>
@@ -133,7 +133,7 @@
         <div class="on-text text-light">
             <p class="text-white-50 mt-5">So many deals!</p>
             <h2>ON SALE</h2>
-            <a href="products.html">Shop Now</a>
+            <a href="#">Shop Now</a>
         </div>
     </div>
 
@@ -156,7 +156,7 @@
                         <p>Pair text with an image to focus on your chosen product, collection, or blog post. Add
                             details on
                             availability, style, or even provide a review.</p>
-                        <a href="products.html">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
+                        <a href="product.html">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
                     </div>
                 </div>
                 <div class="box col-lg-4 col-md-6 col-sm-12">
@@ -166,7 +166,7 @@
                         <p>Pair text with an image to focus on your chosen product, collection, or blog post. Add
                             details on
                             availability, style, or even provide a review.</p>
-                        <a href="products.html">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
+                        <a href="product.html">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
                     </div>
                 </div>
                 <div class="box col-lg-4 col-md-6 col-sm-12">
@@ -176,7 +176,7 @@
                         <p>Pair text with an image to focus on your chosen product, collection, or blog post. Add
                             details on
                             availability, style, or even provide a review.</p>
-                        <a href="products.html">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
+                        <a href="product.html">shop now <i class="fa-solid fa-arrow-right text-white-50"></i></a>
                     </div>
                 </div>
             </div>
@@ -184,7 +184,7 @@
     </div>
 
     <div class="back-img ani mt-5">
-        <a href="products.html">
+        <a href="#">
             <img src="images/back.png" alt="">
         </a>
     </div>
@@ -249,7 +249,7 @@
             <p class="text-white-50 text-light">Give customers details about the banner video(s) or content on the
                 template.
             </p>
-            <a href="products.html">Shop Now</a>
+            <a href="#">Shop Now</a>
         </div>
     </div>
 
@@ -261,7 +261,7 @@
                     <div class="box cur">
                         <div class="image"><img src="images/blog1.png" alt=""></div>
                         <div class="text ms-2">
-                            <h3 class="mt-4 mb-2"><a href="products.html">10 ideas for a gift</a></h3>
+                            <h3 class="mt-4 mb-2"><a href="#">10 ideas for a gift</a></h3>
                             <span>August 18, 2022</span>
                             <p class="mt-2">Candy macaroon chocolate cake powder donut. Powder ice cream pudding pie
                                 chocolate bar
@@ -274,7 +274,7 @@
                     <div class="box cur">
                         <div class="image"><img src="images/blog2.png" alt=""></div>
                         <div class="text ms-2">
-                            <h3 class="mt-4 mb-2"><a href="products.html">Why choose our product</a></h3>
+                            <h3 class="mt-4 mb-2"><a href="#">Why choose our product</a></h3>
                             <span>August 18, 2022</span>
                             <p class="mt-2">Candy chocolate cake powder donut. Powder ice cream pudding pie chocolate
                                 bar muffin sugar plum sweet. Gingerbread brownie donut croissant jelly-o marshmallow
@@ -286,7 +286,7 @@
                     <div class="box cur">
                         <div class="image"><img src="images/blog3.png" alt=""></div>
                         <div class="text ms-2">
-                            <h3 class="mt-4 mb-2"><a href="products.html">Why we make all in Bali</a></h3>
+                            <h3 class="mt-4 mb-2"><a href="#">Why we make all in Bali</a></h3>
                             <span>August 18, 2022</span>
                             <p class="mt-2">Candy macaroon chocolate cake powder donut. Powder ice cream pudding pie
                                 chocolate bar muffin sugar plum sweet. Gingerbread brownie donut croissant jelly-o
@@ -352,7 +352,7 @@
 
 
     <script src="JS/main.js"></script>
-    <script src="JS/buy.js"></script>
+    <script src="JS/product.js"></script> <!--buy-->
 </body>
 
 </html>
