--- a/Cindy/product.html
+++ b/Cindy/product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CINDY</title>
-    <link rel="icon" href="images/about_section.png">
+    <link rel="icon" href="images/2_81c0aa03-67d2-4ced-98c2-3e5613f1e747.webp">
     <link rel="stylesheet" href="CSS/all.min.css">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/bootstrap.min.css.map">
@@ -33,7 +33,7 @@
                 <i class="fa-brands fa-facebook"></i>
                 <i class="fa-brands fa-pinterest"></i>
                 <i class="fa-brands fa-instagram"></i>
-                <a href="cart.html" class="text-dark"><i class="fa-solid fa-bag-shopping"></i></a>
+                <a href="cart.html" class="text-black"><i class="fa-solid fa-bag-shopping"></i></a>
             </div>
         </div>
     </header>
@@ -108,13 +108,17 @@
         </div>
     </footer>
 
+
+
     <script src="JS/main.js"></script>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const priceVal = urlParams.get('price');
         const src = urlParams.get('src');
-        let priceSpan = document.querySelector(".pr")
+
+        let priceSpan = document.querySelector(".pr");
         let cardImage = document.querySelector('.image img');
+
         priceSpan.innerHTML = priceVal;
         cardImage.src = src;
     </script>
