--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -25,53 +25,52 @@
       </div>
     </div>
 
-    <div id="carouselExample" class="carousel slide" data-bs-interval="false">
-      <div class="carousel-inner">
-        <div class="carousel-item active user_name">
+    <div class="content">
+      <div class="slider">
+        <div class="slide user_name">
           <h3 class="my-4">User Name</h3>
           <p>Your name should only contain char</p>
-          <form action="">
-            <div class="row">
-              <div class="col">
-                <input type="text" class="form-control user_input" placeholder="User name" aria-label="User name">
-              </div>
+          <div class="row">
+            <div class="col">
+              <input type="text" class="form-control user_input" placeholder="User name" aria-label="User name">
+              <p class="err"></p>
             </div>
+          </div>
 
-            <div class="row mt-4">
-              <div class="col">
-                <input type="text" class="form-control first_name" placeholder="First name" aria-label="First name">
-              </div>
-              <div class="col">
-                <input type="text" class="form-control last_name" placeholder="Last name" aria-label="Last name">
-              </div>
+          <div class="row mt-3">
+            <div class="col">
+              <input type="text" class="form-control first_name" placeholder="First name" aria-label="First name">
+              <p class="err"></p>
             </div>
-            <button type="button" class="btn mt-5" data-bs-target="#carouselExample" data-bs-slide="next">Submit</button>
-          </form>
+            <div class="col">
+              <input type="text" class="form-control last_name" placeholder="Last name" aria-label="Last name">
+              <p class="err"></p>
+            </div>
+          </div>
+          <button type="button" class="btn mt-4">Submit</button>
         </div>
 
-        <div class="carousel-item email">
+        <div class="slide email">
           <h3 class="my-4">Email Address</h3>
           <p>name@gmail.com</p>
-          <form action="">
-            <div class="mb-3">
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email Address">
-            </div>
-            <button type="button" data-bs-target="#carouselExample" class="btn mt-5" data-bs-slide="next">Submit</button>
-          </form>
+          <div class="mb-3">
+            <input type="email" class="form-control" placeholder="Email Address">
+            <p class="err"></p>
+          </div>
+          <button type="button" class="btn mt-4">Submit</button>
         </div>
 
-        <div class="carousel-item pass">
+        <div class="slide pass">
           <h3 class="my-4">Password</h3>
           <p>Must contain at least 8 char [Number, Upper/Lower case char]</p>
-          <form action="">
-            <div class="mb-3">
-              <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="Password">
-            </div>
-            <button type="button" data-bs-target="#carouselExample" class="btn mt-5" data-bs-slide="next">Submit</button>
-          </form>
+          <div class="mb-3">
+            <input type="password" class="form-control" placeholder="Password">
+            <p class="err"></p>
+          </div>
+          <button type="button" class="btn mt-4">Submit</button>
         </div>
 
-        <div class="carousel-item completed">
+        <div class="slide completed">
           <h3>Congratulations!</h3>
           <p><i>You have completed all the steps required for registration.</i></p>
           <ul class="rules">
@@ -83,10 +82,10 @@
             <li>Once you have confirmed that everything is in order, simply click the 'Submit' button.</li>
           </ul>
 
-          <button type="button" data-bs-target="#carouselExample" class="btn mt-5" data-bs-slide="next">Submit</button>
+          <button type="button" class="btn completed mt-4">Submit</button>
         </div>
 
-        <div class="carousel-item user">
+        <div class="slide user">
           <h3 class="my-4">Account</h3>
           <p id="user"></p>
         </div>
